--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
 
     - name: NPM Install
-      run: npm Install
+      run: npm install
 
     - name: Unit test
       run: npm test
@@ -36,15 +36,15 @@ jobs:
         args: --acl public-read
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_DEVELOPMENT_BUCKET_NAME }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_DEVELOPMENT_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_DEVELOPMENT_SECRET_ACCESS_KEY }}
         AWS_REGION: ${{ secrets.AWS_REGION }}
         SOURCE_DIR: "build"
 
     - name: Invalidate files in CloudFront
       env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_DEVELOPMENT_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_DEVELOPMENT_SECRET_ACCESS_KEY }}
       run: |
         aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DEVELOPMENT_CLOUDFRONT_DISTRIBUTION_ID }} --paths "*"
         
