--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -46,5 +46,5 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_DEVELOPMENT_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_DEVELOPMENT_SECRET_ACCESS_KEY }}
       run: |
-        aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DEVELOPMENT_CLOUDFRONT_DISTRIBUTION_ID }} --paths "*"
+        aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DEVELOPMENT_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
         
