--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -47,4 +47,12 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_DEVELOPMENT_SECRET_ACCESS_KEY }}
       run: |
         aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DEVELOPMENT_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/*"
-        
+       
+    - name: Slack Notification
+      uses: rtCamp/action-slack-notify@v2.0.2
+      env:
+        SLACK_WEBHOOK: ${{ secret.SLACK_WEBHOOK }}
+        SLACK_COLOR: '#3278BD'
+        SLACK_MESSAGE: 'Dominion Record Frontend Deployed to Dev Account'
+        SLACK_USERNAME: 'deployBot'
+        SLACK_ICON_EMOJI: ':white_check_mark:'
