--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2.0.2
       env:
-        SLACK_WEBHOOK: ${{ secret.SLACK_WEBHOOK }}
+        SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
         SLACK_COLOR: '#3278BD'
         SLACK_MESSAGE: 'Dominion Record Frontend Deployed to Dev Account'
         SLACK_USERNAME: 'deployBot'
